fix(auth test): update test suite for service refactor and java 23 support