@@ -100,6 +100,25 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.15.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>1.15.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -126,16 +145,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.5</version>
                 <configuration>
+                    <argLine>
+                        -Dnet.bytebuddy.experimental=true
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
                     <systemProperties>
                         <property>
                             <name>docker.host</name>
                             <value>npipe:////./pipe/docker_engine</value>
-                        </property>
-                        <property>
-                            <name>docker.client.strategy</name>
-                            <value>org.testcontainers.dockerclient.EnvironmentAndSystemPropertyClientProviderStrategy</value>
                         </property>
                     </systemProperties>
                 </configuration>
